[gd_scene load_steps=7 format=2]

[ext_resource path="res://escenas/audiTT.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/rueda-audi.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/VehicleBody.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.9066, 0.827116, 1.02602 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 0.996078, 0.00784314, 0.00784314, 0.196078 )

[sub_resource type="BoxShape" id=3]

[node name="VehicleBody" type="VehicleBody"]
collision_layer = 0
mass = 20.4082
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 3 )

[node name="audiTT" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, -0.0406933, 0 )

[node name="bloque-coche" type="CollisionShape" parent="."]
transform = Transform( 7.98348, 0, 0, 0, 1.98505, 0, 0, 0, 3.21591, 0.00300459, -0.0555974, 0 )
shape = SubResource( 1 )

[node name="VehicleWheel1" type="VehicleWheel" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 4.47157, -1.37345, 2.90363 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 1.3
wheel_friction_slip = 1.2
suspension_stiffness = 20.0
suspension_max_force = 2000.0

[node name="rueda-audi" parent="VehicleWheel1" instance=ExtResource( 2 )]
transform = Transform( -3.25841e-08, 0, -0.2, 0, 0.2, 0, 0.2, 0, -3.25841e-08, 2.8875, 1.29822, -4.40176 )

[node name="VehicleWheel2" type="VehicleWheel" parent="."]
transform = Transform( 1.94707e-07, -3.25841e-07, 1, 3.25841e-07, 1, 3.25841e-07, -1, 3.25841e-07, 1.94707e-07, 4.47157, -1.37345, -2.91115 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 1.3
wheel_friction_slip = 1.2
suspension_stiffness = 20.0
suspension_max_force = 2000.0

[node name="rueda-audi" parent="VehicleWheel2" instance=ExtResource( 2 )]
transform = Transform( -3.25842e-08, 0, 0.2, 5.68434e-14, 0.2, 0, -0.2, -5.33316e-14, -3.25841e-08, -2.89045, 1.29822, 4.38366 )

[node name="VehicleWheel3" type="VehicleWheel" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -4.64681, -1.37345, 2.90363 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 1.3
wheel_friction_slip = 1.1
suspension_stiffness = 20.0
suspension_max_force = 2000.0

[node name="rueda-audi" parent="VehicleWheel3" instance=ExtResource( 2 )]
transform = Transform( -3.25841e-08, 0, -0.2, 0, 0.2, 0, 0.2, 0, -3.25841e-08, 2.8875, 1.29822, -4.40176 )

[node name="VehicleWheel4" type="VehicleWheel" parent="."]
transform = Transform( 1.94707e-07, -3.25841e-07, 1, 3.25841e-07, 1, 3.25841e-07, -1, 3.25841e-07, 1.94707e-07, -4.64681, -1.37345, -2.91115 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 1.3
wheel_friction_slip = 1.1
suspension_stiffness = 20.0
suspension_max_force = 2000.0

[node name="rueda-audi" parent="VehicleWheel4" instance=ExtResource( 2 )]
transform = Transform( -3.25842e-08, 0, 0.2, 5.68434e-14, 0.2, 0, -0.2, -5.33316e-14, -3.25841e-08, -2.89045, 1.29822, 4.38366 )

[node name="RayCast0" type="RayCast" parent="."]
transform = Transform( 1, 5.14001e-15, 0, -5.14001e-15, 1, 0, 0, 0, 1, 6, 0, 2.8 )
enabled = true
cast_to = Vector3( 47, 0, 67 )
collision_mask = 8

[node name="RayCast1" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.15, 0, 1.83 )
enabled = true
cast_to = Vector3( 149, 0, 36 )
collision_mask = 8

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.47627, 0, -0.00418162 )
enabled = true
cast_to = Vector3( 204, 0, 0 )
collision_mask = 8

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.15, 0, -1.83 )
enabled = true
cast_to = Vector3( 149, 0, -36 )
collision_mask = 8

[node name="RayCast4" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2.8 )
enabled = true
cast_to = Vector3( 47, 0, -67 )
collision_mask = 8

[node name="CSGBox0" type="CSGBox" parent="."]
transform = Transform( -0.573576, 2.23359e-07, -0.819152, -3.89414e-07, -1, 4.26326e-14, -0.819152, 3.1899e-07, 0.573576, 29.9574, 9.09495e-13, 36.9087 )
cast_shadow = 0
operation = 1
calculate_tangents = false
width = 83.5
height = 0.2
depth = 0.2
material = SubResource( 2 )

[node name="CSGBox1" type="CSGBox" parent="."]
transform = Transform( -0.971408, 3.7828e-07, -0.237415, -3.89414e-07, -1, -1.42109e-13, -0.237415, 9.24527e-08, 0.971408, 82.536, 0, 20 )
cast_shadow = 0
operation = 1
calculate_tangents = false
width = 153.265
height = 0.2
depth = 0.2
material = SubResource( 2 )

[node name="CSGBox2" type="CSGBox" parent="."]
transform = Transform( -1, 0, -3.89414e-07, 0, 1, 0, 3.89414e-07, 0, -1, 110.472, 0, 0 )
cast_shadow = 0
operation = 1
calculate_tangents = false
width = 204.195
height = 0.2
depth = 0.4
material = SubResource( 2 )

[node name="CSGBox3" type="CSGBox" parent="."]
transform = Transform( -0.971408, -3.7828e-07, 0.237415, 3.89414e-07, -1, -1.42109e-13, 0.237415, 9.24527e-08, 0.971408, 82.536, 0, -20 )
cast_shadow = 0
operation = 1
calculate_tangents = false
width = 153.439
height = 0.2
depth = 0.2
material = SubResource( 2 )

[node name="CSGBox4" type="CSGBox" parent="."]
transform = Transform( -0.573576, -2.23359e-07, 0.819152, 3.89414e-07, -1, 4.26326e-14, 0.819152, 3.1899e-07, 0.573576, 29.957, 0, -36.909 )
cast_shadow = 0
operation = 1
calculate_tangents = false
width = 83.5
height = 0.2
depth = 0.2
material = SubResource( 2 )

[node name="medio" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.592543, 0.0426869 )
monitorable = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape" type="CollisionShape" parent="medio"]
shape = SubResource( 3 )
[connection signal="area_entered" from="medio" to="." method="_on_medio_area_entered"]
[connection signal="body_entered" from="medio" to="." method="_on_medio_body_entered"]
